--- a/src/styling/style.scss
+++ b/src/styling/style.scss
@@ -59,7 +59,7 @@ table {
 
 // Changeables
 
-$baseBright: 10%; // 0-30%
+$baseBright: 20%; // 0-30%
 
 $themehue:  320;
 $accenthue: 210;
@@ -355,27 +355,28 @@ body {
         #userConsoleHead {
             background-color: $t4;
             #userConsoleTitle {color: $t1;}
-            div:nth-child(1) {
+            section:nth-child(1) {
+                button {
+                    box-shadow: 0 2px 3px 1px rgba(0, 0, 0, 0.492);
+
+                }
                 .userConsoleTabActive {
                     background-color: $tu1;
                     span:nth-child(2) {color: $tu9}
                 }
                 .userConsoleTabInactive {
                     background-color: $t0;
-                    box-shadow: 0 2px 3px 1px rgba(0, 0, 0, 0.492);
                     span:nth-child(2) {color: $t8;}
-                    &:hover {
-                        height: 35px;
-                    }
+                    
                 }
             }
-            div:nth-child(2) {background-color: $t2;}
-            div:nth-child(3) {background-color: $t2; span {background-color: $ats7;}}
+            section:nth-child(2) {background-color: $t2;}
+            section:nth-child(3) {background-color: $t2; span {background-color: $ats7;}}
             section:nth-child(4) {
-                background-color: $tu1;
+                // background-color: $tu1;
                 .userConsoleSubpageActive {
                     background-color: $as5;
-                    
+                    // box-shadow: inset 0 0 5px $asX;
                     span:nth-child(1) {color: $asX;}
                     span:nth-child(2) {color: $as8;}
                 }
@@ -392,7 +393,7 @@ body {
                     }
                 }
             }
-            section:nth-child(5) {color: $t1;}
+            section:nth-child(5) {color: $t0;}
         }
         #userConsoleSidebar {
             background-color: $tu0;
@@ -450,7 +451,7 @@ body {
                 background-color: $atd7;
             }
             #breakTimeConsoleLog {
-                background-color: $atd2;
+                background-color: $atd1;
             }
     
         }
@@ -665,7 +666,7 @@ body {
             #breakTimeConsoleDesk {
                 background-color: $ad2;
             }
-            #breakTimeConsoleMenu {
+            #breakTimeConsoleLog {
                 background-color: $as0;
             }
     
@@ -995,7 +996,7 @@ body {
         font-weight: 700;
         font-size: 13px;
         letter-spacing: 1.5px;
-        margin: 4px 0 4px auto;
+        margin: 5px 0 5px auto;
         padding: 3px 9px;
         line-height: 13px;
         text-align: right;
@@ -1033,7 +1034,7 @@ body {
 
     #userConsoleDesk {
         
-        height: calc(100% - 149px);
+        height: calc(100% - 144px);
         display: block;
         position: absolute;
         right: 5px;
@@ -1055,19 +1056,21 @@ body {
         left: 0;
         overflow: hidden;
         display: grid;
-        grid-template-rows: 16px 27px 40px 45px;
+        grid-template-rows: 15px 25px 50px 45px;
         grid-template-columns: calc(100% - 40px) 40px;
-        grid-template-areas: "consoleProgressBar consoleProgressBar" "dateTime consoleRefresh" "consoleTabs consoleRefresh" "consoleSubpages consoleSubpages";
-        div:nth-child(1) {
+        grid-template-areas: "consoleProgressBar consoleProgressBar" "dateTime consoleRefresh" "consoleTabs consoleTabs" "consoleSubpages consoleSubpages";
+        section:nth-child(1) {
             grid-area: consoleTabs;
             cursor: default;
-            overflow: hidden;
+            overflow-y: hidden;
+            overflow-x: scroll;
             display: flex;
-            width: max-content;
+            width: 100%;
             
             button {
                 border: none;
                 height: 30px;
+                width: max-content;
                 display: grid;
                 margin: auto 5px 0 5px;
                 border-radius: 4px 4px 0 0;
@@ -1079,18 +1082,18 @@ body {
                 
                 img {
                     grid-area: consoleTabIcon;
-                    height: 22px;
-                    width: 22px;
+                    height: 18px;
+                    width: 18px;
                     margin: 4px;
                     background-color: $t5;
                 }
                 span {
-                    line-height: 30px;
-                    font-size: 16px;
+                    line-height: 25px;
+                    font-size: 15px;
                     font-weight: 600;
-                    letter-spacing: 1px;
+                    letter-spacing: 2px;
                     grid-area: consoleTabTitle;
-                    padding: 0 10px 0 5px;
+                    padding: 0 10px 0 0;
                     text-transform: uppercase;
                     letter-spacing: 2px;
                 }
@@ -1099,13 +1102,24 @@ body {
                 }
             }
             .userConsoleTabActive {
-                height: 35px;
-            }
-            .userConsoleTabInactive {
                 height: 30px;
             }
+            .userConsoleTabInactive {
+                height: 25px;
+                &:hover {height: 30px;}
+            }
+            &::-webkit-scrollbar {
+                background-color: $tu1; 
+                height: 14px;
+            }
+            &::-webkit-scrollbar-thumb {
+                background-color: $tu6; 
+                border: 4px solid $tu1;
+                border-radius: 8px;
+            }
+            
         }
-        div:nth-child(2) {
+        section:nth-child(2) {
             grid-area: consoleRefresh;
             width: calc(100% - 10px);
             width: 24px;
@@ -1116,7 +1130,7 @@ body {
             border-radius: 4px;
             transition: width .5s;
         }
-        div:nth-child(3) {
+        section:nth-child(3) {
             grid-area: consoleProgressBar;
             
             width: calc(100% - 8px);
@@ -1137,17 +1151,22 @@ body {
         section:nth-child(4) {
             grid-area: consoleSubpages;
             display: flex;
-            width: auto;
-            height: 45px;
-            overflow: hidden;
-            padding-left: 5px;
+            width: calc(100% - 8px);
+            height: 35px;
+            overflow-x: scroll;
+            overflow-y: hidden;
+            background-color: $tu1;
+            border: 4px solid $tu1;
+            border-top: none;
+
+            // padding-left: 5px;
             button {
                 cursor: default;
-                overflow: hidden;
+                // overflow: hidden;
                 width: max-content;
                 border: none;
-                height: 30px;
-                margin: 10px 5px;
+                height: 25px;
+                margin: 0 5px;
                 display: flex;
                 border-radius: 4px;
                 padding: 0px 5px;
@@ -1155,16 +1174,15 @@ body {
                 transition: height .5s, background .5s, margin .5s, color .5s;
                 
                 span {
-                    line-height: 22px;
+                    line-height: 17px;
                     // text-transform: uppercase;
-                    font-size: 15px;
+                    font-size: 14px;
                     font-weight: 600;
                     letter-spacing: 1px;
-                    padding: 4px;
+                    padding: 4px 2px;
                     transition:  height .5s, background .5s, margin .5s, color .5s;
                 }
                 span:nth-child(1) {
-                    grid-area: consoleSubpageTitle;
                     letter-spacing: 1px;
                 }
                 span:nth-child(2) {
@@ -1173,15 +1191,24 @@ body {
             
                     
             }
+            &::-webkit-scrollbar {
+                background-color: $tu1; 
+                height: 6px;
+            }
+            &::-webkit-scrollbar-thumb {
+                background-color: $tu6; 
+                // border: 2px solid red;
+                border-radius: 8px;
+            }
         }
         section:nth-child(5) {
             grid-area: dateTime;
             // background-color: red;
-            line-height: 30px;
+            line-height: 18px;
             margin-left: 5px;
             font-weight: 600;
             text-transform: uppercase;
-            font-size: 16px;
+            font-size: 14px;
             letter-spacing: 1px;
         }
     }
@@ -1190,7 +1217,7 @@ body {
     }
     #userConsoleSidebar {
         display: block;
-        height: calc(100% - 159px);
+        height: calc(100% - 155px);
         padding: 5px;
         position: absolute;
         left: 30px;
@@ -1439,7 +1466,7 @@ body {
                     border-radius: 3px;
                     transition: background 5s 2.5s;
                     &:hover {
-                        transition: background .1s;
+                        transition: background .05s;
                         background-color: $atsX;
                     }
                 }
@@ -1465,10 +1492,10 @@ body {
                 padding-left: 5px;
                 button {
                     height: 30px;
-                    width: max-content;
+                    width: auto;
                     background-color: $atd1;
                     margin: 10px 5px;
-                    transition: height .5s, background .5s, color .5s;
+                    transition: height .5s, background .5s, color .5s, boxShadow .5s;
                     font-size: 15px;
                     font-weight: 600;
                     border-radius: 4px;
@@ -1480,7 +1507,8 @@ body {
                     overflow: hidden;
 
                 }
-                .userBreakConsoleTabActive {background-color: $atsX; color: $ats2;}
+                // &:-webkit-scrollbar {appearance: none;}
+                .userBreakConsoleTabActive {background-color: $atsX; color: $ats2; box-shadow: 0 0 8px $atsX, 0 0 4px $ats9;}
                 .userBreakConsoleTabInactive {background-color: $atd6; color: $atd0; &:hover {background-color: $atd8;color: $atd2;}}
             }
             section:nth-child(4) {
