--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -174,7 +174,7 @@ body {
   background-color: hsl(210, 43%, 41%);
 }
 .nightMode #userDash {
-  background: hsl(320, 8%, 41%);
+  background: hsl(320, 8%, 62%);
   box-shadow: -2px 0 4px 2px rgba(0, 0, 0, 0.4);
 }
 .nightMode #userDashboard p {
@@ -995,356 +995,154 @@ body {
   margin: 5px 10px 10px 10px;
 }
 
-#userConsole {
-  display: block;
+.console main {
+  display: grid;
   position: absolute;
-  overflow: hidden;
-  border-radius: 5px;
-  transition: top 1s, background 1s, box-shadow 1s, width 1s, height 1s;
-  left: 10px;
-  font-size: 14px;
-  z-index: 4;
-  cursor: pointer;
+  height: calc(100% - 20px);
   width: calc(100% - 20px);
-  height: calc(100vh - 120px);
-}
-#userConsole #userConsoleDesk {
-  height: calc(100% - 144px);
-  display: block;
-  position: absolute;
-  right: 5px;
-  padding: 5px;
-  bottom: 5px;
-  transition: width 1s, background 0.4s, box-shadow 0.4s, height 1s;
+  grid-template-rows: 74px auto;
+  grid-template-areas: "header" "body";
   border-radius: 4px;
-  cursor: default;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  z-index: 5;
+  box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.492);
+  top: 60px;
+  width: calc(100% - 20px);
+  height: calc(100% - 121px);
+  left: 10px;
+  background-color: hsl(320, 8%, 20%);
+  z-index: 7;
 }
-#userConsole #userConsoleDesk::-webkit-scrollbar {
-  display: none;
+.console main header {
+  grid-area: header;
+  position: relative;
+  display: grid;
+  margin: 4px 4px 0 4px;
+  grid-template-rows: 16px 24px 30px;
+  grid-template-columns: 36px auto;
+  grid-template-areas: "consoleTitle consoleDateTime" "consoleAchievement consoleAchievement" "consoleButton consoleTabs";
 }
-#userConsole #userConsoleHead {
+.console main header section {
+  height: 100%;
   width: 100%;
-  height: 128px;
+  border-radius: 4px;
+}
+.console main header section:nth-child(1) {
+  grid-area: consoleTitle;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 16px;
+  color: hsl(320, 8%, 41%);
+  padding-left: 2px;
+}
+.console main header section:nth-child(2) {
+  grid-area: consoleDateTime;
+  text-align: right;
+  font-weight: 500;
+  letter-spacing: 1.25px;
+}
+.console main header section:nth-child(2) span:nth-child(1) {
+  color: hsl(320, 8%, 55%);
+}
+.console main header section:nth-child(2) span:nth-child(2) {
+  color: hsl(320, 8%, 76%);
+}
+.console main header section:nth-child(3) {
+  grid-area: consoleAchievement;
+  background-color: hsl(320, 8%, 34%);
+  width: calc(100% - 18px);
+  height: 6px;
+  margin: 4px;
+  padding: 5px;
+}
+.console main header section:nth-child(3) span {
+  display: block;
+  height: 6px;
+  background-color: hsl(30, 63%, 62%);
+  border-radius: 4px;
+}
+.console main header section:nth-child(4) {
+  grid-area: consoleButton;
+  background-color: hsl(210, 33%, 69%);
+  width: 30px;
+  height: 30px;
+  margin-left: 4px;
+  position: absolute;
+}
+.console main header section:nth-child(4) button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  transition: height 0.5s, background 0.5s, width 0.5s, left 0.5s, top 0.5s;
+  position: absolute;
+  border: none;
+  border-radius: 4px;
+  background-color: hsl(210, 33%, 41%);
+}
+.console main header section:nth-child(5) {
+  grid-area: consoleTabs;
+  background-color: hsl(320, 8%, 41%);
+  height: 30px;
+  width: calc(100% - 6px);
+  margin-left: 2px;
+}
+.console main section {
+  grid-area: body;
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+.console main section section {
+  position: absolute;
+  border-radius: 4px;
+  transition: width 1s;
+}
+.console main section section:nth-child(2) {
+  top: 4px;
+  right: 4px;
+  height: calc(100% - 8px);
+  background-color: hsl(320, 8%, 55%);
+}
+.console main section section:nth-child(1) {
+  bottom: 8px;
+  left: 8px;
+  height: calc(100% - 16px);
+  width: 300px;
+  background-color: hsl(320, 8%, 34%);
+}
+.console main section section:nth-child(1) section:nth-child(1) {
   position: absolute;
   top: 0;
   left: 0;
-  overflow: hidden;
   display: grid;
-  grid-template-rows: 15px 25px 50px 45px;
-  grid-template-columns: calc(100% - 40px) 40px;
-  grid-template-areas: "consoleProgressBar consoleProgressBar" "dateTime consoleRefresh" "consoleTabs consoleTabs" "consoleSubpages consoleSubpages";
-}
-#userConsole #userConsoleHead section:nth-child(1) {
-  grid-area: consoleTabs;
-  cursor: default;
-  overflow-y: hidden;
-  overflow-x: scroll;
-  display: flex;
-  width: 100%;
-}
-#userConsole #userConsoleHead section:nth-child(1) button {
-  border: none;
-  height: 30px;
-  width: -moz-max-content;
-  width: max-content;
-  display: grid;
-  margin: auto 5px 0 5px;
-  border-radius: 4px 4px 0 0;
-  padding: 0;
-  cursor: pointer;
-  transition: height 0.5s, background 0.5s, margin 0.5s, color 0.5s;
-  grid-template-columns: 30px auto;
-  grid-template-areas: "consoleTabIcon consoleTabTitle";
-}
-#userConsole #userConsoleHead section:nth-child(1) button img {
-  grid-area: consoleTabIcon;
-  height: 18px;
-  width: 18px;
-  margin: 4px;
-  background-color: hsl(320, 8%, 55%);
-}
-#userConsole #userConsoleHead section:nth-child(1) button span {
-  line-height: 25px;
-  font-size: 15px;
-  font-weight: 600;
-  letter-spacing: 2px;
-  grid-area: consoleTabTitle;
-  padding: 0 10px 0 0;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-}
-#userConsole #userConsoleHead section:nth-child(1) button:first-child {
-  margin-left: 10px;
-}
-#userConsole #userConsoleHead section:nth-child(1) .userConsoleTabActive {
-  height: 30px;
-}
-#userConsole #userConsoleHead section:nth-child(1) .userConsoleTabInactive {
-  height: 25px;
-}
-#userConsole #userConsoleHead section:nth-child(1) .userConsoleTabInactive:hover {
-  height: 30px;
-}
-#userConsole #userConsoleHead section:nth-child(1)::-webkit-scrollbar {
-  background-color: hsl(320, 13%, 27%);
-  height: 14px;
-}
-#userConsole #userConsoleHead section:nth-child(1)::-webkit-scrollbar-thumb {
-  background-color: hsl(320, 13%, 62%);
-  border: 4px solid hsl(320, 13%, 27%);
-  border-radius: 8px;
-}
-#userConsole #userConsoleHead section:nth-child(2) {
-  grid-area: consoleRefresh;
-  width: calc(100% - 10px);
-  width: 24px;
-  height: 24px;
-  right: 5px;
-  position: absolute;
-  top: 3px;
-  border-radius: 4px;
-  transition: width 0.5s;
-}
-#userConsole #userConsoleHead section:nth-child(3) {
-  grid-area: consoleProgressBar;
-  width: calc(100% - 8px);
-  margin: 4px;
-  border-radius: 4px;
-  height: 10px;
-  cursor: default;
-}
-#userConsole #userConsoleHead section:nth-child(3) span {
-  height: 4px;
-  border-radius: 4px;
-  display: block;
-  margin: 3px;
-  width: 30%;
-  transition: width 0.5s;
-}
-#userConsole #userConsoleHead section:nth-child(4) {
-  grid-area: consoleSubpages;
-  display: flex;
-  width: calc(100% - 8px);
-  height: 35px;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  background-color: hsl(320, 13%, 27%);
-  border: 4px solid hsl(320, 13%, 27%);
-  border-top: none;
-}
-#userConsole #userConsoleHead section:nth-child(4) button {
-  cursor: default;
-  width: -moz-max-content;
-  width: max-content;
-  border: none;
-  height: 25px;
-  margin: 0 5px;
-  display: flex;
-  border-radius: 4px;
-  padding: 0px 5px;
-  cursor: pointer;
-  transition: height 0.5s, background 0.5s, margin 0.5s, color 0.5s;
-}
-#userConsole #userConsoleHead section:nth-child(4) button span {
-  line-height: 17px;
-  font-size: 14px;
-  font-weight: 600;
-  letter-spacing: 1px;
-  padding: 4px 2px;
-  transition: height 0.5s, background 0.5s, margin 0.5s, color 0.5s;
-}
-#userConsole #userConsoleHead section:nth-child(4) button span:nth-child(1) {
-  letter-spacing: 1px;
-}
-#userConsole #userConsoleHead section:nth-child(4) button span:nth-child(2) {
-  grid-area: consoleSubpageQuantity;
-}
-#userConsole #userConsoleHead section:nth-child(4)::-webkit-scrollbar {
-  background-color: hsl(320, 13%, 27%);
-  height: 6px;
-}
-#userConsole #userConsoleHead section:nth-child(4)::-webkit-scrollbar-thumb {
-  background-color: hsl(320, 13%, 62%);
-  border-radius: 8px;
-}
-#userConsole #userConsoleHead section:nth-child(5) {
-  grid-area: dateTime;
-  line-height: 18px;
-  margin-left: 5px;
-  font-weight: 600;
-  text-transform: uppercase;
-  font-size: 14px;
-  letter-spacing: 1px;
-}
-#userConsole .consoleSidebarClosed {
-  width: calc(100% - 40px);
-}
-#userConsole #userConsoleSidebar {
-  display: block;
-  height: calc(100% - 155px);
-  padding: 5px;
-  position: absolute;
-  left: 30px;
-  bottom: 10px;
-  border-radius: 4px 0 0 4px;
-  cursor: default;
-  transition: width 1s;
-  overflow: hidden;
-}
-#userConsole #userConsoleSidebar #userConsoleHelp {
-  overflow: hidden;
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  transition: height 1s, width 1s;
-  border-radius: 4px;
-}
-#userConsole #userConsoleSidebar #userConsoleHelp section {
-  display: grid;
-  transition: height 1s, width 1s;
   grid-template-columns: 30px auto;
   grid-template-rows: 30px auto;
-  grid-template-areas: "helpToolClose helpToolTitle" "helpToolHelper helpToolMain";
+  background-color: red;
 }
-#userConsole #userConsoleSidebar #userConsoleHelp section button {
-  grid-area: helpToolClose;
-  border: none;
-  border-radius: 4px;
-  width: 22px;
-  height: 22px;
-  margin: 4px;
-  cursor: pointer;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 22px;
-}
-#userConsole #userConsoleSidebar #userConsoleHelp section div:nth-child(2) {
-  grid-area: helpToolTitle;
-  line-height: 30px;
-  text-align: right;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
-#userConsole #userConsoleSidebar #userConsoleHelp section div:nth-child(3) {
-  grid-area: helpToolMain;
-  width: 100%;
-  width: calc(100% - 5px);
-  height: calc(100% - 5px);
-  margin: 0;
-}
-#userConsole #userConsoleSidebar #userConsoleHelp section div:nth-child(4) {
-  grid-area: helpToolHelper;
-  transition: height 1s, width 1s, margin 1s;
-  border-radius: 4px;
-  position: relative;
-  margin: 0 4px 4px 4px;
-}
-#userConsole #userConsoleSidebar #userConsoleHelp section .consoleHelpDeskClosed {
-  width: 22px;
-  height: 22px;
-}
-#userConsole #userConsoleSidebar #consoleSidebarContent {
+.console main section section:nth-child(1) section:nth-child(2) {
   position: absolute;
-  bottom: 5px;
-  transition: height 1s, width 1s;
-  left: 5px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  width: calc(100% - 15px);
-  padding: 5px 0 5px 5px;
-  border-radius: 4px;
+  bottom: 0;
+  left: 0;
+  background-color: blue;
 }
-#userConsole #userConsoleSidebar #consoleSidebarContent ul {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  margin: 5px 0 5px 0;
-  padding: 2.5px;
-  border-radius: 4px;
-  width: calc(100% - 5px);
+.console .consoleSidebarOpen header section:nth-child(4) button {
+  height: 18px;
+  width: 18px;
+  left: 6px;
+  top: 6px;
 }
-#userConsole #userConsoleSidebar #consoleSidebarContent ul li {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  margin: 5px;
-  padding: 5px;
-  letter-spacing: 1px;
-  border-radius: 4px;
-  font-size: 16px;
+.console .consoleSidebarOpen section section:nth-child(2) {
+  width: calc(100% - 8px);
+  width: calc(100% - 320px);
 }
-#userConsole #userConsoleSidebar #consoleSidebarContent ul li span {
-  padding: 5px;
-  font-size: 16px;
-  width: calc(100% - 10px);
-  border-radius: 4px;
-  display: block;
-  margin-top: 5px;
+.console .consoleSidebarClosed header section:nth-child(4) button {
+  height: 22px;
+  width: 22px;
+  left: 4px;
+  top: 4px;
 }
-#userConsole #userConsoleSidebar #consoleSidebarContent ul li span b {
-  font-weight: 600;
-  text-transform: uppercase;
-}
-#userConsole #userConsoleSidebar #consoleSidebarContent ul li span:first-child {
-  text-transform: uppercase;
-  font-weight: 600;
-  margin-top: 0;
-}
-#userConsole #userConsoleSidebar #consoleSidebarContent ul li:first-child span {
-  padding: 5px;
-  font-size: 16px;
-  width: calc(100% - 10px);
-  border-radius: 4px;
-  display: block;
-  margin-top: 5px;
-}
-#userConsole #userConsoleSidebar #consoleSidebarContent ul li:first-child span b {
-  font-weight: 600;
-  text-transform: uppercase;
-}
-#userConsole #userConsoleSidebar #consoleSidebarContent ul li:first-child span:first-child {
-  text-transform: uppercase;
-  font-weight: 600;
-  margin-top: 0;
-  font-size: 18px;
-  letter-spacing: 2px;
-  font-weight: 600;
-  text-transform: uppercase;
-  line-height: 24px;
-}
-#userConsole #userConsoleSidebar #consoleSidebarContent::-webkit-scrollbar {
-  -webkit-appearance: none;
-          appearance: none;
-  width: 15px;
-  border-radius: 4px;
-}
-#userConsole #userConsoleSidebar #consoleSidebarContent::-webkit-scrollbar-thumb {
-  overflow: hidden;
-  border-radius: 10px;
-  border-width: 5px;
-  border-style: solid;
-}
-#userConsole .consoleHelpToolOpen #userConsoleHelp {
-  width: calc(100% - 10px);
-}
-#userConsole .consoleHelpToolClosed #userConsoleHelp {
-  width: 30px;
-  height: 30px;
-}
-#userConsole .consoleHelpToolClosed #consoleSidebarContent {
-  height: calc(100% - 55px);
-}
-
-.userConsoleOpen {
-  top: 60px;
-}
-
-.userConsoleClosed {
-  top: -150vh;
+.console .consoleSidebarClosed section section:nth-child(2) {
+  width: calc(100% - 8px);
 }
 
 #breakTimeFooter {
