--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -1004,6 +1004,7 @@ body {
   grid-template-areas: "header" "body";
   border-radius: 4px;
   box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.492);
+  overflow: hidden;
   top: 60px;
   width: calc(100% - 20px);
   height: calc(100% - 121px);
@@ -1029,6 +1030,7 @@ body {
   grid-area: consoleTitle;
   font-weight: 700;
   text-transform: uppercase;
+  line-height: 16px;
   letter-spacing: 2px;
   font-size: 16px;
   color: hsl(320, 8%, 41%);
@@ -1037,7 +1039,9 @@ body {
 .console main header section:nth-child(2) {
   grid-area: consoleDateTime;
   text-align: right;
+  line-height: 16px;
   font-weight: 500;
+  font-size: 14px;
   letter-spacing: 1.25px;
 }
 .console main header section:nth-child(2) span:nth-child(1) {
@@ -1062,7 +1066,7 @@ body {
 }
 .console main header section:nth-child(4) {
   grid-area: consoleButton;
-  background-color: hsl(210, 33%, 69%);
+  background-color: hsl(210, 43%, 83%);
   width: 30px;
   height: 30px;
   margin-left: 4px;
@@ -1085,45 +1089,126 @@ body {
   width: calc(100% - 6px);
   margin-left: 2px;
 }
-.console main section {
+.console main div {
   grid-area: body;
   display: block;
   width: 100%;
   height: 100%;
   position: absolute;
 }
-.console main section section {
+.console main div section {
   position: absolute;
   border-radius: 4px;
   transition: width 1s;
 }
-.console main section section:nth-child(2) {
+.console main div .consoleDesk {
   top: 4px;
   right: 4px;
   height: calc(100% - 8px);
   background-color: hsl(320, 8%, 55%);
 }
-.console main section section:nth-child(1) {
+.console main div .consoleSidebar {
   bottom: 8px;
   left: 8px;
+  position: absolute;
+  overflow: hidden;
   height: calc(100% - 16px);
   width: 300px;
   background-color: hsl(320, 8%, 34%);
 }
-.console main section section:nth-child(1) section:nth-child(1) {
+.console main div .consoleSidebar .consoleSidebarContent {
   position: absolute;
   top: 0;
   left: 0;
+  transition: height 1s, width 1s;
+  width: 100%;
   display: grid;
-  grid-template-columns: 30px auto;
+  grid-template-columns: 28px auto;
+  overflow: hidden;
   grid-template-rows: 30px auto;
-  background-color: red;
+  grid-template-areas: "consoleSidebarTabs consoleSidebarTitle" "consoleSidebarTabs consoleSidebarContent";
 }
-.console main section section:nth-child(1) section:nth-child(2) {
+.console main div .consoleSidebar .consoleSidebarContent section {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
+}
+.console main div .consoleSidebar .consoleSidebarContent section:nth-child(1) {
+  grid-area: consoleSidebarTabs;
+  overflow: hidden;
+  border-radius: 4px;
+  height: calc(100% - 4px);
+  width: 28px;
+}
+.console main div .consoleSidebar .consoleSidebarContent section:nth-child(1) button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  width: 20px;
+  height: 20px;
+  border: none;
+  margin: 4px 0 0 4px;
+  background-color: hsl(320, 13%, 55%);
+  border-radius: 4px;
+}
+.console main div .consoleSidebar .consoleSidebarContent section:nth-child(2) {
+  grid-area: consoleSidebarTitle;
+  color: hsl(320, 8%, 76%);
+  line-height: 16px;
+  margin: 12px 4px 0 4px;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 2.5px;
+  width: calc(100% - 8px);
+  height: 16px;
+}
+.console main div .consoleSidebar .consoleSidebarContent section:nth-child(3) {
+  grid-area: consoleSidebarContent;
+  background-color: hsl(320, 8%, 62%);
+  margin-top: 4px;
+  border-radius: 4px;
+  width: calc(100% - 4px);
+  height: calc(100% - 4px);
+}
+.console main div .consoleSidebar .consoleSidebarHelp {
   position: absolute;
   bottom: 0;
-  left: 0;
-  background-color: blue;
+  right: 0;
+  margin: 4px;
+  background-color: hsl(210, 43%, 55%);
+  transition: height 1s, width 1s;
+}
+.console main div .consoleSidebar .consoleSidebarHelp button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  width: 18px;
+  height: 18px;
+  padding: 0;
+  line-height: 18px;
+  font-size: 14px;
+  font-weight: 500;
+  border-radius: 4px;
+  margin: 4px;
+  border: none;
+  color: hsl(210, 43%, 90%);
+  background-color: hsl(210, 43%, 20%);
+}
+.console main .consoleHelpOpen .consoleSidebarContent {
+  height: calc(100% - 300px);
+}
+.console main .consoleHelpOpen .consoleSidebarHelp {
+  height: 292px;
+  width: 292px;
+}
+.console main .consoleHelpClosed .consoleSidebarContent {
+  height: calc(100% - 35px);
+}
+.console main .consoleHelpClosed .consoleSidebarHelp {
+  height: 26px;
+  width: 26px;
 }
 .console .consoleSidebarOpen header section:nth-child(4) button {
   height: 18px;
@@ -1131,8 +1216,7 @@ body {
   left: 6px;
   top: 6px;
 }
-.console .consoleSidebarOpen section section:nth-child(2) {
-  width: calc(100% - 8px);
+.console .consoleSidebarOpen div .consoleDesk {
   width: calc(100% - 320px);
 }
 .console .consoleSidebarClosed header section:nth-child(4) button {
@@ -1141,7 +1225,7 @@ body {
   left: 4px;
   top: 4px;
 }
-.console .consoleSidebarClosed section section:nth-child(2) {
+.console .consoleSidebarClosed div .consoleDesk {
   width: calc(100% - 8px);
 }
 
